test/compile-error/2/ConcatSpace.java
public class ConcatSpace {

  // Can't convert integer to string
  public String main(String a, String b) {
    return (String) 300;
  }

}
